; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_indexer.c_objects_cmp.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_indexer.c_objects_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @objects_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @objects_cmp(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.entry*, align 8
  %6 = alloca %struct.entry*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.entry*
  store %struct.entry* %8, %struct.entry** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.entry*
  store %struct.entry* %10, %struct.entry** %6, align 8
  %11 = load %struct.entry*, %struct.entry** %5, align 8
  %12 = getelementptr inbounds %struct.entry, %struct.entry* %11, i32 0, i32 0
  %13 = load %struct.entry*, %struct.entry** %6, align 8
  %14 = getelementptr inbounds %struct.entry, %struct.entry* %13, i32 0, i32 0
  %15 = call i32 @git_oid__cmp(i32* %12, i32* %14)
  ret i32 %15
}

declare dso_local i32 @git_oid__cmp(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
